# dictionary-correction

./: CMakeLists.txt  Dictionary.cpp  Dictionary.h  DictionaryTokenHandler.cpp  DictionaryTokenHandler.h  FileWriteTokenHandler.cpp  FileWriteTokenHandler.h  README.md  TokenHandler.h  Tokenizer.cpp  Tokenizer.h  dictionary - Copy.txt  main.cpp  text - Copy.txt
